# RISCV

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
inc/: alu.hpp  cpu.hpp  decode.hpp  defs.hpp  memory.hpp  utils.hpp
scripts/: build.sh  clean_build_and_test.sh  format_all.sh
src/: alu.cpp  cpu.cpp  decode.cpp  memory.cpp
tests/: CMakeLists.txt  test_cpu.cpp  test_decode.cpp  test_memory.cpp
